* Make Class constructors return the "initialize" method's return value. Closes #11481 [cch1]

* Make Event's private method isCssLoaded() fail when the "sheet" object of an element is null or undefined. [jddalton]

* Change the way Element.extend() detects XML nodes by testing for the existence of element.ownerDocument.body. [Diego Perini, jddalton]

* Minimize IE6 memory leak caused by Element.extend() and private variables "body", "docEl", and "root". [jddalton]

* Make Form.focusFirstElement() focus the first element instead of activating it. [#473 state:resolved] [jddalton, Robert Sosinski]

* Ensure Field.focus() doesn't throw an error when the element or its ancestors are not visible. [#521 state:resolved] [jddalton, Stefan Esterer]

* Ensure Array#last won't attempt a -1 index with zero length arrays. [#236 state:resolved] [jddalton, kangax]

* Minor source and whitespace cleanup. [jddalton]

* Cleanup stylesheet load detection in dom-loaded.js and implement a better detection scheme. [Diego Perini, jddalton]

* Optimize private method nodeListSlice() by replacing $A() calls with a while-loop and remove its dependency on the nodeList "length" property. [Diego Perini, jddalton]

* Optimize Hash#toJSON by using a direct reference of this._object instead of a clone. [jddalton]

* Remove dependency of Array#inject in Object.toQueryString, Hash#toQueryString and String#toQueryParams. [jddalton,  Joe Gornick]

* Cleanup Object data type detection methods and utilize Object.prototype.toString.call() to access an objects ineternal [[Class]] property. [jddalton, kangax]

* unit test: Change all occurrences of window.location.toString() to window.location.href. [jddalton]

* Minor cleanup of Function#bind methods. [jddalton]

* Optimize private helper method prependList() and cleanup nodeListSlice(). [jddalton]

* Make document.viewport methods take advantage of the "root" private variable. [jddalton]
