@@ -1484,6 +1484,7 @@ new Test.Unit.Runner({
     $('dimensions-table').hide();
     this.assertIdentical(100, $('dimensions-table').getDimensions().height);
     this.assertIdentical(200, $('dimensions-table').getDimensions().width);
+    $('dimensions-table').show();
   },
       
   testElementClonePosition: function() {
