@@ -1,3 +1,6 @@
+* Avoid IE element.style.cssText bug effecting hidden elements. [jddalton]
+  Note: Accessing a hidden element's client/offset<dimension> properties before appending cssText will make the client/offset<dimension> values unchanged by the new style.
+
 * Make Class constructors return the "initialize" method's return value. Closes #11481 [cch1]
 
 * Make Event's private method isCssLoaded() fail when the "sheet" object of an element is null or undefined. [jddalton]
